--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="col-lg-6">
           <br> </br>
           <h1 class="mt-5">Who Am I and What is This?</h1>
-          <p> Hi! I am Danielle Zevitz! I am a Computer Scientist at the University of Virginia! 
+          <p> Hi! I am Danielle Zevitz! I am a Computer Science Major at the University of Virginia! 
             Welcome to my interactive Resume Website! Click around to learn more about me, and my past experiences!
           </p>
         </div>
