--- a/Projects/FinSpace.html
+++ b/Projects/FinSpace.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Danielle Zevitz - GWC </title>
+  <title>Danielle Zevitz - FinSpace.Online</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,10 +38,10 @@
             <a class="nav-link" href="#">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Projects/Projects.html">Projects</a>
+            <a class="nav-link" href="Projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ClubPosts.html">Clubs</a>
+            <a class="nav-link" href="../ClubPosts/ClubPosts.html">Clubs</a>
           </li>
           <li>
             <a class="nav-link" href="#">Jobs and Internships</a>
@@ -69,60 +69,56 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Founding Girls Who Code at UVA</h1>
+        <h1 class="mt-4">FinSpace.Online</h1>
 
         <!-- Author -->
         <p class="lead">
-          January 2020 - Present
+          March 2020
         </p>
 
         <hr> 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+        <img class="img-fluid rounded" style = "width: 200%; height: 20%;"src="images/FIN.png" alt="">
 
         <hr>
 
         <!-- Post Content -->
 
         <!-- What is Girls Who Code at UVA?-->
-        <p class="lead"><b>What is Girls Who Code at UVA?</b></p>
+        <p class="lead"><b>Briefly, what is FinSpace.Online?</b></p>
         <p>
-          <!-- Fix these statistics later! -->
-          According to ___, in the 19[40]? only [34]% of the computer science industry was female, and this number has steadly decreased
-          since. Currently, only 18% of the computer science industry is female.
-        </p>
-        <p>
-          Most girls loose interest in computer science around the ages of [10-12]. 
-        </p>
-        <p>
-          Girls Who Code is a non-profit organization founded by _____ dedicated to instilling a passion for coding in female computer 
-          scientist at a young age. By providing resources to young women and by normalizing computer science in their education, we 
-          can close the gender gap in computer science.
-        </p>
-        <p>
-          Girls Who Code at UVA contibutes to the cause by assisting local schools and girl scout troups as well as providing its 
-          members with unique workshops and opportunities.
+          <a href="https://www.FinSpace.Online">FinSpace.Online </a> is a website I created with one other teammate during AthenaHack's 
+          2020 Hackathon. It provides a platform for abused children to safely and comfortably find resources. It won 3 awards: 
+          Microsoft's Hack for Good, Facebook's Best Community Hack, and Google's Best Use of Google Cloud.
         </p>
         
         <!-- My involvment -->
-        <p class="lead"><b>My involment</b></p>
-        <p>When I was in my Sophomore year of college, my roommate and I founded a chapter of Girls Who Code at our college, the University of
-          Virginia. I took the role of vice president and spent hours everyday making the club what it is today.
-          Within two weeks, we became one of largest GWC loops nationally.<br> <br>
-          My duties:
-          <ul>
-            <li> Leading Executive Member and General Member Meetings </li>
-            <li> Reaching out to external companies and organizations</li>
-            <li> Monitor all club events </li>
-            <li> Create a three year plan that insures the sustainability of the club for years to come</li>
-            <li> Fulfil the presidential duties when the President is not avaliable (mainly maintaining communication and transparency
-              between other GWC chapters and club sponsors)
-            </li>
-          </ul>
+        <p class="lead"><b>My Main Contribution</b></p>
+        <p> My main contribution to the site was the chat bot. I developed it using Microsoft Azure. It addresses Alcohol, Drug, Sexual,
+          and Physical Abuse as well as some side effects such as depression. It takes into account typos and synonymns so it is a 
+          resource to children of many literacy levels. It has a conversation with the child rather than spitting out resources 
+          to build trust. It has many general conversation topics built in, as well as responses like "You can tell me anything" and
+          "Everything said will stay between you and me" to assure them their parents, friends, or other adults in their life will never
+          see their conversation. If any red flags are triggered, the child will immediately be ask "Would you like to speak to a real 
+          person?" and if they say yes, they will be put in contact with a child abuse helpline. If they reply with no, they are directed to
+          testimonials of other people in similar situations to encourage them to speak up but not force them to. Speaking to a bot
+          is a lot easier for a lot of children than speaking to a human, because the bot will not follow them for the rest of their life.
         </p>
       <br>
-        <p class="lead"><b>Club Events and Activies</b></p>
-        <p></p>
+        <!-- Award Descriptions -->
+        <p class="lead"><b>Awards</b></p>
+        <p>
+        <ul>
+          <li> Microsoft's Hack for Good: *description*</li>
+          <li> Facebook's Best Community Hack:</li>
+          <li> Google's Best Use of Google Cloud </li>
+        </ul>
+      </p>
+
+      <p class="lead"><b>Full Pitch</b></p>
+      <p></p>
+
+
 
         <hr>
 
@@ -132,15 +128,12 @@
       <!-- Sidebar Widgets Column -->
       <div class="col-md-4">
 
-        <!-- Search Widget -->
+        <!-- Link To Website -->
         <div class="card my-4">
-          <h5 class="card-header">Search</h5>
+          <h5 class="card-header">See It For Yourself!</h5>
           <div class="card-body">
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search for...">
-              <span class="input-group-btn">
-                <button class="btn btn-secondary" type="button">Go!</button>
-              </span>
+              <h1> <a href="https://www.FinSpace.Online">FinSpace.Online </a></h1>
             </div>
           </div>
         </div>
@@ -153,10 +146,16 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">Leadership</a>
+                    <a href="#">HTML</a>
                   </li>
                   <li>
-                    <a href="#">Collaboration</a>
+                    <a href="#">Microsoft Azure</a>
+                  </li>
+                  <li>
+                    <a href="#">CSS</a>
+                  </li>
+                  <li>
+                    <a href="#">GitHub</a>
                   </li>
                 </ul>
               </div>
@@ -166,7 +165,7 @@
                     <a href="#">Networking</a>
                   </li>
                   <li>
-                    <a href="#">Organization</a>
+                    <a href="#">Canva/Microsoft Paint</a>
                   </li>
                 </ul>
               </div>
