--- a/ClubPosts/OYFA.html
+++ b/ClubPosts/OYFA.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Danielle Zevitz - GWC </title>
+  <title>Danielle Zevitz - OYFA</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -69,11 +69,11 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Founding Girls Who Code at UVA</h1>
+        <h1 class="mt-4">Organization Of Young Filipino Americans</h1>
 
         <!-- Author -->
         <p class="lead">
-          January 2020 - Present
+          September 2018 - Present
         </p>
 
         <hr> 
@@ -85,44 +85,22 @@
         <!-- Post Content -->
 
         <!-- What is Girls Who Code at UVA?-->
-        <p class="lead"><b>What is Girls Who Code at UVA?</b></p>
+        <p class="lead"><b>What is the Organization of Young Filipino Americans?</b></p>
         <p>
           <!-- Fix these statistics later! -->
-          According to ___, in the 19[40]? only [34]% of the computer science industry was female, and this number has steadly decreased
-          since. Currently, only 18% of the computer science industry is female.
-        </p>
-        <p>
-          Most girls loose interest in computer science around the ages of [10-12]. 
-        </p>
-        <p>
-          Girls Who Code is a non-profit organization founded by _____ dedicated to instilling a passion for coding in female computer 
-          scientist at a young age. By providing resources to young women and by normalizing computer science in their education, we 
-          can close the gender gap in computer science.
-        </p>
-        <p>
-          Girls Who Code at UVA contibutes to the cause by assisting local schools and girl scout troups as well as providing its 
-          members with unique workshops and opportunities.
+          The Organization of Young Filipino Americans (OYFA) promotes the culture and advancement of Filipinos-Americans on College Campuses. 
+          The organization itself hosts two culture events a year along with several smaller cultural/social events. OYFA's mission is 
+          to education the public on Filipino culture as well as creating a safe space for all members regardless of their race or religion.
         </p>
         
         <!-- My involvment -->
         <p class="lead"><b>My involment</b></p>
-        <p>When I was in my Sophomore year of college, my roommate and I founded a chapter of Girls Who Code at our college, the University of
-          Virginia. I took the role of vice president and spent hours everyday making the club what it is today.
-          Within two weeks, we became one of largest GWC loops nationally.<br> <br>
-          My duties:
-          <ul>
-            <li> Leading Executive Member and General Member Meetings </li>
-            <li> Reaching out to external companies and organizations</li>
-            <li> Monitor all club events </li>
-            <li> Create a three year plan that insures the sustainability of the club for years to come</li>
-            <li> Fulfil the presidential duties when the President is not avaliable (mainly maintaining communication and transparency
-              between other GWC chapters and club sponsors)
-            </li>
-          </ul>
+        <p> I am very active in the club, as well as the cultural event, Barrio. In the Spring of 2019 and 2020, I participated in the
+          event by performing in several traditional/modern dances as well as playing the National Anthem at the beginning of the event.
+          I the Spring 2020 semester, I performed the lead female role in the Barrio 2020 skit, Clarity, which addressed many political
+          issues in the 1960's Phillipines. 
         </p>
       <br>
-        <p class="lead"><b>Club Events and Activies</b></p>
-        <p></p>
 
         <hr>
 
