--- a/Projects/DataStructures.html
+++ b/Projects/DataStructures.html
@@ -8,13 +8,13 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Danielle Zevitz - GWC </title>
+  <title>Danielle Zevitz - Projects</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="../css/blog-post.css" rel="stylesheet">
+  <link href="../css/blog-home.css" rel="stylesheet">
 
 </head>
 
@@ -38,10 +38,10 @@
             <a class="nav-link" href="#">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Projects/Projects.html">Projects</a>
+            <a class="nav-link" href="Projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ClubPosts.html">Clubs</a>
+            <a class="nav-link" href="../ClubPosts/ClubPosts.html">Clubs</a>
           </li>
           <li>
             <a class="nav-link" href="#">Jobs and Internships</a>
@@ -59,75 +59,73 @@
       </div>
     </div>
   </nav>
-
   <!-- Page Content -->
   <div class="container">
 
     <div class="row">
 
-      <!-- Post Content Column -->
-      <div class="col-lg-8">
+      <!-- Blog Entries Column -->
+      <div class="col-md-8">
 
-        <!-- Title -->
-        <h1 class="mt-4">Founding Girls Who Code at UVA</h1>
+        <h1 class="my-4">Club Involvment
+        </h1>
 
-        <!-- Author -->
-        <p class="lead">
-          January 2020 - Present
-        </p>
+        <!-- Blog Post -->
+        <div class="card mb-4">
+          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title">FinSpace.Online</h2>
+            <p class="card-text"> I created FinSpace.Online with one teammate at the AthenaHacks Hackathon in March 2020. I addressed
+              how abused children can safely and comfortably get help. It won 3 awards: Microsoft's Hack for Good, Facebook's Best
+              Community Hack, and Google's Best Use of Google Cloud. </p>
+            <a href="FinSpace.html" class="btn btn-primary">Read More &rarr;</a>
+          </div>
+          <div class="card-footer text-muted">
+            March 2020
+          </div>
+        </div>
 
-        <hr> 
-        <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+        <!-- Blog Post -->
+        <div class="card mb-4">
+          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title">Data Structures</h2>
+            <p class="card-text"> Over the course of my college career, I developed a repository of homemade databases. These databases
+              include: linked lists (C++), stacks (C++), binary trees (C++, Java), AVL Trees (C++), HashTables(C++) 
+            </p>
+            <a href="DataStructures.html" class="btn btn-primary">Read More &rarr;</a>
+          </div>
+          <div class="card-footer text-muted">
+            Posted on January 1, 2017 by
+            <a href="#">Start Bootstrap</a>
+          </div>
+        </div>
 
-        <hr>
+        <!-- Blog Post -->
+        <div class="card mb-4">
+          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title">Post Title</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+            <a href="#" class="btn btn-primary">Read More &rarr;</a>
+          </div>
+          <div class="card-footer text-muted">
+            Posted on January 1, 2017 by
+            <a href="#">Start Bootstrap</a>
+          </div>
+        </div>
 
-        <!-- Post Content -->
-
-        <!-- What is Girls Who Code at UVA?-->
-        <p class="lead"><b>What is Girls Who Code at UVA?</b></p>
-        <p>
-          <!-- Fix these statistics later! -->
-          According to ___, in the 19[40]? only [34]% of the computer science industry was female, and this number has steadly decreased
-          since. Currently, only 18% of the computer science industry is female.
-        </p>
-        <p>
-          Most girls loose interest in computer science around the ages of [10-12]. 
-        </p>
-        <p>
-          Girls Who Code is a non-profit organization founded by _____ dedicated to instilling a passion for coding in female computer 
-          scientist at a young age. By providing resources to young women and by normalizing computer science in their education, we 
-          can close the gender gap in computer science.
-        </p>
-        <p>
-          Girls Who Code at UVA contibutes to the cause by assisting local schools and girl scout troups as well as providing its 
-          members with unique workshops and opportunities.
-        </p>
-        
-        <!-- My involvment -->
-        <p class="lead"><b>My involment</b></p>
-        <p>When I was in my Sophomore year of college, my roommate and I founded a chapter of Girls Who Code at our college, the University of
-          Virginia. I took the role of vice president and spent hours everyday making the club what it is today.
-          Within two weeks, we became one of largest GWC loops nationally.<br> <br>
-          My duties:
-          <ul>
-            <li> Leading Executive Member and General Member Meetings </li>
-            <li> Reaching out to external companies and organizations</li>
-            <li> Monitor all club events </li>
-            <li> Create a three year plan that insures the sustainability of the club for years to come</li>
-            <li> Fulfil the presidential duties when the President is not avaliable (mainly maintaining communication and transparency
-              between other GWC chapters and club sponsors)
-            </li>
-          </ul>
-        </p>
-      <br>
-        <p class="lead"><b>Club Events and Activies</b></p>
-        <p></p>
-
-        <hr>
+        <!-- Pagination -->
+        <ul class="pagination justify-content-center mb-4">
+          <li class="page-item">
+            <a class="page-link" href="#">&larr; Older</a>
+          </li>
+          <li class="page-item disabled">
+            <a class="page-link" href="#">Newer &rarr;</a>
+          </li>
+        </ul>
 
       </div>
-
 
       <!-- Sidebar Widgets Column -->
       <div class="col-md-4">
@@ -147,26 +145,32 @@
 
         <!-- Categories Widget -->
         <div class="card my-4">
-          <h5 class="card-header">Skill Obtained</h5>
+          <h5 class="card-header">Categories</h5>
           <div class="card-body">
             <div class="row">
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">Leadership</a>
+                    <a href="#">Web Design</a>
                   </li>
                   <li>
-                    <a href="#">Collaboration</a>
+                    <a href="#">HTML</a>
+                  </li>
+                  <li>
+                    <a href="#">Freebies</a>
                   </li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">Networking</a>
+                    <a href="#">JavaScript</a>
                   </li>
                   <li>
-                    <a href="#">Organization</a>
+                    <a href="#">CSS</a>
+                  </li>
+                  <li>
+                    <a href="#">Tutorials</a>
                   </li>
                 </ul>
               </div>
