--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <!-- Custom styles for this template -->
   <link href="css/the-big-picture.css" rel="stylesheet">
 
+  <!-- My CSS -->
+  <link href="css/custom.css" rel="stylesheet" >
+
+
 </head>
 
 <body>
@@ -30,7 +34,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -38,10 +42,13 @@
             <a class="nav-link" href="#">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="Projects/Projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Club involvment</a>
+            <a class="nav-link" href="ClubPosts/ClubPosts.html">Clubs</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">Jobs and Internships</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Awards</a>
@@ -62,11 +69,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <br> </br>
-          <h1 class="mt-5">Who Am I and What is This?</h1>
-          <p> Hi! I am Danielle Zevitz! I am a Computer Science Major at the University of Virginia! 
-            Welcome to my interactive Resume Website! Click around to learn more about me, and my past experiences!
-          </p>
+            <br> </br>
+            <br> </br>
+            <h1 class = "hi" id = "Mytext">Who Am I and What is This?</h1>
+            <p style ="background-color:white;border: 2px solid black; padding: 3px;"> Hi! I am Danielle Zevitz! I am a Computer Science Major at the University of Virginia! 
+              Welcome to my interactive Resume Website! Click around to learn more about me, and my past experiences!
+            </p>
+          </div>
         </div>
       </div>
     </div>
