GWC content + more

--- a/ClubPosts/ClubPosts.html
+++ b/ClubPosts/ClubPosts.html
@@ -72,7 +72,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <img class="card-img-top" src="images/GWCThumb.png" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Founding Girls Who Code at UVA</h2>
             <p class="card-text">When I was in my Sophomore year of college, my roommate and I founded a chapter of Girls Who Code 
@@ -114,11 +114,11 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <img class="card-img-top" style= "height: 300px;" src="images/MarchingBand.png" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Monroe Society Tech/PR</h2>
+            <h2 class="card-title">Marching Band</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-            <a href="MonroeSociety.html" class="btn btn-primary">Read More &rarr;</a>
+            <a href="MarchingBand.html" class="btn btn-primary">Read More &rarr;</a>
           </div>
           <div class="card-footer text-muted">
             September 2018 - Present
