--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,4 +1,4 @@
-d<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,26 +8,19 @@ d<!DOCTYPE html>
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Danielle Zevitz - A Resume</title>
+  <title>Danielle Zevitz - About Me</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/the-big-picture.css" rel="stylesheet">
-
-  <!-- My CSS -->
-  <link href="css/custom.css" rel="stylesheet" >
-
 
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Danielle Zevitz</a>
+      <a class="navbar-brand" href="#">About Me</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -65,24 +58,23 @@ d<!DOCTYPE html>
   </nav>
 
   <!-- Page Content -->
-  <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-            <br> </br>
-            <br> </br>
-            <h1 class = "hi" id = "Mytext">Who Am I and What is This?</h1>
-            <p style ="background-color:white;border: 2px solid black; padding: 3px;"> Hi! I am Danielle Zevitz! I am a Computer Science Major at the University of Virginia! 
-              Welcome to my interactive Resume Website! Click around to learn more about me, and my past experiences!
-            </p>
-          </div>
-        </div>
-      </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h1 class="mt-5">Who Is Danielle Zevitz?</h1>
+        <!--<p class="lead">Complete with pre-defined file paths and responsive navigation!</p>-->
+        <p>Hello! I am Danielle Zevitz, a Sophomore Computer Science Major at the University of Virginia! I made this website to show my 
+        resume in a fun new way! <br> Here are a few highlights:
+        </p>
+        <ul class="list-unstyled">
+          <li><a href="ClubPosts/GirlsWhoCode.html">Founding Girls Who Code</a></li>
+          <li><a href="Projects/FinSpace.html">FinSpace.Online</a></li>
+        </ul>
     </div>
-  </section>
+  </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/jquery/jquery.slim.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
