--- a/ClubPosts/MonroeSociety.html
+++ b/ClubPosts/MonroeSociety.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Danielle Zevitz - GWC </title>
+  <title>Danielle Zevitz - MOSO </title>
 
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -69,55 +69,41 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Founding Girls Who Code at UVA</h1>
+        <h1 class="mt-4">Growing in the Monroe Society</h1>
 
         <!-- Author -->
         <p class="lead">
-          January 2020 - Present
+          September 2018 - Present
         </p>
 
         <hr> 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="images/GWCThumb.png" alt="">
+        <img class="img-fluid rounded" src="" alt="">
 
         <hr>
 
         <!-- Post Content -->
 
-        <!-- What is Girls Who Code at UVA?-->
-        <p class="lead"><b>What is Girls Who Code at UVA?</b></p>
+        <p class="lead"><b>What is the Monroe Society?</b></p>
         <p>
-          According to <a href=https://www.usnews.com/news/data-mine/articles/2016-10-20/study-computer-science-gender-gap-widens-despite-increase-in-jobs> 
-          USNEWS.com</a>, in the 1984 only 37% of computer science majors were female. This number steadly decreased, and now,
-           only 18% of the computer science industry is female.
+          The Monroe Society is an organization that focuses on giving prospective students the real UVA experience
+          through an overnight stay with a current UVA student. 
         </p>
-        <p>
-          Most girls lose interest in computer science around the middle school years. 
-        </p>
-        <p>
-          Girls Who Code is a non-profit organization founded by Reshma Saujani dedicated to instilling a passion for coding in female computer 
-          scientist at a young age. By providing resources to young women and by normalizing computer science in their education, we 
-          can close the gender gap in computer science.
-        </p>
-        <p>
-          Girls Who Code at UVA contibutes to the cause by assisting local schools and girl scout troups as well as providing its 
-          members with unique workshops and opportunities.
-        </p>
+        
         
         <!-- My involvment -->
         <p class="lead"><b>My involment</b></p>
-        <p>When I was in my Sophomore year of college, my roommate and I founded a chapter of Girls Who Code at our college, the University of
-          Virginia. I took the role of vice president and spent hours everyday making the club what it is today.
-          Within two weeks, we became one of largest GWC loops nationally.<br> <br>
+        <p>My overnight stay with the monroe society was the reason why I decided to go to UVA. I had no desire
+          to go to UVA at all but my host was very welcoming and this was the first time I was sure I wanted to 
+          got go to a University. I went from being a Prospective student to an officer to the Technology and PR chair
+          to being the president!<br> <br>
           My duties:
           <ul>
-            <li> Leading Executive Member and General Member Meetings </li>
-            <li> Reaching out to external companies and organizations</li>
-            <li> Monitor all club events </li>
-            <li> Create a three year plan that insures the sustainability of the club for years to come</li>
-            <li> Fulfil the presidential duties when the President is not avaliable (mainly maintaining communication and transparency
-              between other GWC chapters and club sponsors)
-            </li>
+            <li>Creating and Maintaining relationships with UVA and the community</li>
+            <li>Maintain the UVA Monroe Society Website</li>
+            <li>Manage an executive team</li>
+            <li>Developed a more informative matching system</li>
+            <li>Improved transparency between exec and general  members</li>
           </ul>
         </p>
       <br>
@@ -128,7 +114,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="http://placehold.it/300x200" alt="">
           <div class="card-body">
-            <h4 class="card-title">Microsoft Panel</h4>
+            <h4 class="card-title">Smores Night</h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
           </div>
           <div class="card-footer">
@@ -140,7 +126,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="http://placehold.it/300x200" alt="">
           <div class="card-body">
-            <h4 class="card-title">GWC & Computers4Kids</h4>
+            <h4 class="card-title">fdfd</h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
           </div>
           <div class="card-footer">
@@ -152,7 +138,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="http://placehold.it/300x200" alt="">
           <div class="card-body">
-            <h4 class="card-title">GWC & Girl Scouts</h4>
+            <h4 class="card-title">untitled</h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
           </div>
           <div class="card-footer">
@@ -168,7 +154,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="http://placehold.it/300x200" alt="">
           <div class="card-body">
-            <h4 class="card-title">Instagram Filter Workshop</h4>
+            <h4 class="card-title">untitled</h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
           </div>
           <div class="card-footer">
@@ -180,7 +166,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="images/GWCSmores.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">GWC Smores</h4>
+            <h4 class="card-title">s</h4>
             <p class="card-text"> The first GWC social event. The general members were introduced to the Founding
               exec team for the first time!
             </p>
