--- a/Jobs/Jobs.html
+++ b/Jobs/Jobs.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Danielle Zevitz - Clubs</title>
+  <title>Danielle Zevitz - Projects</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,10 +38,10 @@
             <a class="nav-link" href="#">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Projects/Projects.html">Projects</a>
+            <a class="nav-link" href="Projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Clubs</a>
+            <a class="nav-link" href="../ClubPosts/ClubPosts.html">Clubs</a>
           </li>
           <li>
             <a class="nav-link" href="#">Jobs and Internships</a>
@@ -72,16 +72,16 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="images/GWCThumb.png" alt="Card image cap">
+          <img class="card-img-top" src="images/FIN.png" style= "height: 300px;" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Founding Girls Who Code at UVA</h2>
-            <p class="card-text">When I was in my Sophomore year of college, my roommate and I founded a chapter of Girls Who Code 
-              at the University of Virginia. I took the role of vice president and spent hours everyday making the club what it is today.
-              Within two weeks, we became one of largest GWC loops nationally. </p>
-            <a href="GirlsWhoCode.html" class="btn btn-primary">Read More &rarr;</a>
+            <h2 class="card-title">FinSpace.Online</h2>
+            <p class="card-text"> I created FinSpace.Online with one teammate at the AthenaHacks Hackathon in March 2020. I addressed
+              how abused children can safely and comfortably get help. It won 3 awards: Microsoft's Hack for Good, Facebook's Best
+              Community Hack, and Google's Best Use of Google Cloud. </p>
+            <a href="FinSpace.html" class="btn btn-primary">Read More &rarr;</a>
           </div>
           <div class="card-footer text-muted">
-            January 2020 - Present
+            March 2020
           </div>
         </div>
 
@@ -89,39 +89,28 @@
         <div class="card mb-4">
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Organization of Young Filipino Americans</h2>
+            <h2 class="card-title">Data Structures</h2>
+            <p class="card-text"> Over the course of my college career, I developed a repository of homemade databases. These databases
+              include: linked lists (C++), stacks (C++), binary trees (C++, Java), AVL Trees (C++), HashTables(C++) 
+            </p>
+            <a href="DataStructures.html" class="btn btn-primary">Read More &rarr;</a>
+          </div>
+          <div class="card-footer text-muted">
+            November 2019 - Present
+          </div>
+        </div>
+
+        <!-- Blog Post -->
+        <div class="card mb-4">
+          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title">Post Title</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-            <a href="OYFA.html" class="btn btn-primary">Read More &rarr;</a>
+            <a href="#" class="btn btn-primary">Read More &rarr;</a>
           </div>
           <div class="card-footer text-muted">
             Posted on January 1, 2017 by
             <a href="#">Start Bootstrap</a>
-          </div>
-        </div>
-
-        <!-- Blog Post -->
-        <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-          <div class="card-body">
-            <h2 class="card-title">Growing to be President of the Monroe Society</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-            <a href="MonroeSociety.html" class="btn btn-primary">Read More &rarr;</a>
-          </div>
-          <div class="card-footer text-muted">
-            September 2018 - Present
-          </div>
-        </div>
-
-        <!-- Blog Post -->
-        <div class="card mb-4">
-          <img class="card-img-top" style= "height: 300px;" src="images/MarchingBand.png" alt="Card image cap">
-          <div class="card-body">
-            <h2 class="card-title">Marching Band</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-            <a href="MarchingBand.html" class="btn btn-primary">Read More &rarr;</a>
-          </div>
-          <div class="card-footer text-muted">
-            September 2018 - Present
           </div>
         </div>
 
